<resources>
    <string name="app_name">Edna ChatCenter</string>

    <string name="login_to_account">Вход в аккаунт</string>
    <string name="server">Сервер</string>
    <string name="settings">Настройки</string>
    <string name="user">Пользователь</string>
    <string name="api_version">Версия API</string>
    <string name="log_level">Уровень лога: </string>
    <string name="clear">Очистить</string>
    <string name="login">Войти</string>
    <string name="log">Лог</string>
    <string name="go_to_chat">Открыть чат в окне</string>
    <string name="exit">"Выход"</string>
    <string name="ecc_start">Старт</string>
    <string name="ecc_log">Лог</string>
    <string name="ecc_chat">Чат</string>
    <string name="logout">Logout</string>
    <string name="logout_client_text">Вход под пользователем: </string>
    <string name="demonstrations_examples">Демонстрационные примеры</string>
    <string name="functional_not_support">Функционал не поддерживается в текущей версии приложения.</string>

    <string name="launch_fragment_label">Welcome screen</string>
    <string name="servers_fragment_label">Select server screen</string>
    <string name="demonstrations">Демонстрации</string>
    <string name="chat">Чат</string>
    <string name="add_server_fragment_label">Add server screen</string>
    <string name="user_list_fragment_label">Select user screen</string>
    <string name="add_user_fragment_label">Add user screen</string>
    <string name="settings_fragment_label">Settings screen</string>

    <string name="text_messages">Текстовые сообщения</string>
    <string name="connection_errors">Сообщения с ошибками</string>
    <string name="voice_messages">Голосовые сообщения</string>
    <string name="images">Изображения</string>
    <string name="files">Файлы</string>
    <string name="system_messages">Системные сообщения</string>
    <string name="chat_with_bot">Чат с ботом</string>
    <string name="deleted_and_edited_messages">Удаленные и измененные сообщения</string>

    <string name="servers">Серверы</string>
    <string name="users">Пользователи</string>
    <string name="name">Name</string>
    <string name="name_hint">* Name</string>
    <string name="nick_name">Имя пользователя</string>
    <string name="nick_name_hint">* Имя пользователя</string>
    <string name="user_id">ID пользователя</string>
    <string name="user_id_hint">* ID пользователя</string>
    <string name="user_data">Данные пользователя</string>
    <string name="app_marker">appMarker</string>
    <string name="signature">signature</string>
    <string name="authorization_header">Authorization header</string>
    <string name="x_auth_schema_header">X-Auth-Schema header</string>
    <string name="datastore_url">Datastore URL</string>
    <string name="threads_gate_url">Threads Gate URL</string>
    <string name="server_base_url">Server Base URL</string>
    <string name="threads_gate_provider_uid">Threads Gate Provider Uid</string>
    <string name="datastore_url_hint">* Datastore URL</string>
    <string name="threads_gate_url_hint">* Threads Gate URL</string>
    <string name="server_base_url_hint">* Server Base URL</string>
    <string name="threads_gate_provider_uid_hint">* Threads Gate Provider Uid</string>
    <string name="required_field">Поле обязательное для заполнения</string>
    <string name="empty_user_list_text">Добавьте пользователя\nдля входа в чат</string>

    <string name="content_description_back_button">Кнопка назад</string>
    <string name="content_description_save_button">Кнопка сохранить</string>
    <string name="content_description_add_button">Кнопка добавить</string>
    <string name="content_description_server_list_icon">Иконка элемента списка серверов</string>
    <string name="content_description_edit_button">Кнопка редактировать</string>
    <string name="content_description_remove_button">Кнопка удалить</string>
    <string name="content_description_user_list_icon">Иконка элемента списка пользователей</string>

    <string name="demo_alt_threads_contact_center">Демонстрация сообщений</string>
    <string name="demo_alt_threads_operator_subtitle">Оператор Елена</string>

    <string name="app_theme_settings">Настройка темы приложения</string>
    <string name="follow_system_theme">Как в системе</string>
    <string name="dark_theme">Темная</string>
    <string name="light_theme">Светлая</string>
    <string name="ok">OK</string>
    <string name="remove">Удалить</string>
    <string name="edit">Изменить</string>
    <string name="no_servers">Нет доступных серверов для запуска</string>
    <string name="no_logs_text">Логов нет</string>
    <string name="to_previous_log">К предыдущему логу</string>
    <string name="to_next_log">К следущему логу</string>
    <string name="sdk_settings">настройки sdk</string>
    <string name="async_init">Асинхронная инициализация SDK</string>
    <string name="search">Поиск</string>
    <string name="opengraph">Отображение OpenGraph</string>
    <string name="keep_websocket">Оставлять WebSocket активным (тест счетчика)</string>
    <string name="keep_websocket_during_session">Оставлять WebSocket активным до закрытия диалога</string>
    <string name="websocket_reconnect">Автоматическое переподключение WebSocket</string>
    <string name="unread_messages_count">Кол-во непрочитанных сообщений</string>
    <string name="prefill_chat_input">Предзаполнить поле ввода</string>
    <string name="sdk_init_delay">Задержка инициализации SDK (1 сек)</string>
    <string name="subtitle_show_org_unit">Показывать Organization Unit консультанта в подзаголовке</string>

    <!-- Пример переопределения строки в SDK -->
    <!-- <string name="ecc_input_placeholder">Type your message</string> -->
</resources>